syntax = "proto3";

package proto;
option go_package = "./pb";

service FileWatcher {
    rpc InitDir (InitDirRequest) returns (InitDirResponse) {}
    rpc CreateFile (CreateFileRequest) returns (CreateFileResponse) {}
    rpc CreateDir (CreateDirRequest) returns (CreateDirResponse) {}
    rpc WriteFile (WriteFileRequest) returns (WriteFileResponse) {}
    rpc RemoveFileDir (RemoveFileDirRequest) returns (RemoveFileDirResponse) {}
    rpc RenameFileDir (RenameFileDirRequest) returns (RenameFileDirResponse) {}
}

message InitDirRequest {
    string sessionToken = 1;
    string dirName = 2;
    bytes existingData = 3;
}

message InitDirResponse {
    bool isDirInitialized = 1;
}

message CreateFileRequest {
    string filePath = 1;
    string senderDirName = 2;
    string sessionToken = 3;
}

message CreateFileResponse {
    bool fileCreated = 1;
}

message CreateDirRequest {
    string dirPath = 1;
    string senderDirName = 2;
    string sessionToken = 3;
}

message CreateDirResponse {
    bool dirCreated = 1;
}

message WriteFileRequest {
    string filePath  = 1;
    bytes fileContent = 2;
    string senderDirName = 3;
    string sessionToken = 4;
}

message WriteFileResponse {
    bool fileWritten = 1;
}

message RemoveFileDirRequest {
    string fileDirPath = 1;
    string senderDirName = 2;
    string sessionToken = 3;
}

message RemoveFileDirResponse {
    bool fileRemoved = 1;
}

message RenameFileDirRequest {
    string oldFileDirName = 1;
    string newFileDirName = 2;
    string senderDirName = 3;
    string sessionToken = 4;
}

message RenameFileDirResponse {
    bool fileRenamed = 1;
}
